--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "3.11.10"
 flask = "^3.1.0"
 gunicorn = "^23.0.0"
 python-dotenv = "^1.0.1"
