--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ python = "3.11.10"
 flask = "^3.1.0"
 gunicorn = "^23.0.0"
 python-dotenv = "^1.0.1"
+psycopg2-binary = "^2.9.10"
+validators = "^0.34.0"
+requests = "^2.32.3"
 
 
 [tool.poetry.group.dev.dependencies]
