--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python-dotenv = "^1.0.1"
 psycopg2-binary = "^2.9.10"
 validators = "^0.34.0"
 requests = "^2.32.3"
+beautifulsoup4 = "^4.12.3"
 
 
 [tool.poetry.group.dev.dependencies]
